# Code-Samples

./: .gitignore
BrickBreaker/src/: Gameplay.java  Main.java  Map.java
DigitRecognition/: ZahlenErkennung_MSE.keras  main.py  requirements.txt  setup_env.ps1  setup_env.sh
DoodleJump/: CMakeLists.txt  main.cpp
EmailClient/: mvnw.cmd  pom.xml
EmailClient/src/main/java/: module-info.java
EmailClient/src/main/java/com/example/emailclient/: AlertBox.java  ChooseData.java  HelloApplication.java  HelloController.java  LoginScreen.java  MainScreen.java  OpenMail.java  ReadWrite.java  SaveLoad.java  SendMail.java
EmailClient/src/main/resources/com/example/emailclient/: ChooseData.fxml  MainScreen.fxml
SameGame/: CMakeLists.txt  main.cpp
